# ArcBoost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
examples/: circular_efficiency.py  multi_arc_efficiency.py  multi_circular_budget.py  net_load.py  net_load_features.py  sine_wave.py  single_arc_efficiency.py  wraparound_arc_power.py
patches/lightgbm/: 0001-ArcBoost-add-CircularBin-to-BinType-enum.patch  0002-ArcBoost-BinMapper-circular_period_-field-ValueToBin.patch  0003-ArcBoost-kCircularMask-decision-type-flag.patch  0004-ArcBoost-declare-FindBestThresholdCircular-stub-body.patch  0005-ArcBoost-route-CircularBin-through-FindBestThreshold.patch  0006-ArcBoost-circular_feature-circular_period-max_bin_ci.patch  0007-ArcBoost-wire-circular_feature-circular_period-max_b.patch  0008-ArcBoost-rename-python-package-lightgbm-to-python-pa.patch  0009-ArcBoost-distributed-tree-learners-reject-circular_f.patch  0010-ArcBoost-reject-circular_feature-on-GPU-CUDA-device-.patch  0011-ArcBoost-route-circular_feature-to-BinMapper-InitAsC.patch  0012-ArcBoost-implement-FindBestThresholdCircular-O-B-2-a.patch  0013-ArcBoost-Tree-SplitCircular-CircularDecision-inferen.patch
scripts/: apply_patches.sh  bump_lightgbm.sh
tests/: conftest.py  test_against_categorical_baseline.py  test_circular_bin_mapper.py  test_circular_split_recovery.py  test_complement_arc_equivalence.py
